Fixes major problems and added more tests